# gemini-url-context-tool

./: .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
gemini_url_context_tool/: __init__.py  cli.py  utils.py
gemini_url_context_tool/commands/: __init__.py  query_commands.py
gemini_url_context_tool/core/: __init__.py  client.py
tests/: __init__.py  test_utils.py
